# Plotforge

./: .dockerignore  Dockerfile  fly.toml  preprocessing.py  pyproject.toml  server.py
static/: app.js  index.html  style.css
static/js/: cncjs.js  config.js  generate.js  preprocess.js  state.js  ui.js  upload.js  viewer.js
