[project]
name = "svg2gcode"
version = "0.1.0"
description = "Web-based SVG to G-code converter for MPCNC pen plotting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "vpype>=1.14.0",
    "vpype-gcode>=0.4.0",
]

